syntax = "proto3";

package order;

option go_package = "./order";

import "google/protobuf/timestamp.proto";

message OrderItem {
  uint32 menu_item_id = 3;
  uint32 restaurant_id = 4;
  int32 quantity = 5;
}

message Order {
  uint32 id = 1;
  uint32 user_id = 2;
  string status = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  repeated OrderItem order_items = 6;
}

message CreateOrderRequest {
  uint32 user_id = 1;
  repeated OrderItem order_items = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  uint32 id = 1;
}

message OrderResponse {
  Order order = 1;
}

message MultipleOrderResponse {
  repeated Order orders = 1;
}

message UpdateOrderRequest {
  uint32 order_id = 1;
  string status = 2;
}

message GetOrderByUserIdRequest {
  uint32 user_id = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrderById(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderRequest) returns (OrderResponse);
  rpc GetOrdersByUserId(GetOrderByUserIdRequest) returns (MultipleOrderResponse);
}